--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -196,7 +196,7 @@
       </div>
     </div>
     <div class="membership-cta">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSesEVk6ahJTSJ_dKVBh_Z-fyFZv4D677N6ha71yJWYvAO4u1Q/viewform?usp=header" target="_blank" class="membership-btn">Buy Membership</a>
+      <a href="/api/membership" class="membership-btn">Buy Membership</a>
     </div>
   </section>
 
