--- a/views/register.ejs
+++ b/views/register.ejs
@@ -32,14 +32,15 @@
     }
 
     .container {
-      position: relative;
-      z-index: 1;
-      background-color: rgba(255, 255, 255, 0.8); 
-      padding: 30px;
-      margin-top: 10%;
-      border-radius: 10px;
-      height: 80%;
-    }
+    position: relative;
+    z-index: inherit;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 31px;
+    margin-top: 21%;
+    margin-bottom: 2%;
+    border-radius: 10px;
+    height: 102%;
+}
 
     .plans {
       display: flex;
